--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: go
 
 install:
-  - sudo apt-get install libsdl2-dev
+  - export LD_LIBRARY_PATH="/usr/local/lib/:$LD_LIBRARY_PATH"
+  - wget http://www.libsdl.org/release/SDL2-2.0.3.tar.gz
+  - tar -zxvf SDL2-2.0.0.tar.gz
+  - cd SDL2-2.0.0
+  - ./configure && make && sudo make install
+  - cd -
