[travis]: go get for test packages.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - cd SDL2-2.0.3
   - ./configure && make && sudo make install
   - cd -
-  - go get -d -v ./... && go build -v ./...
+  - go get -d -v -t ./...
